ability tree validating on click event